=== v0.3.3
* Removed an exception in Arguments/Locale initialize.
* Updated API.
Autcomplete:
    + Variables in method.
    * Returned `awt`.
    * Fixed UA window title.

=== v0.3.2
* Fixed `NullPointerException` to highlight cells on `TreeView`. But if it is `null`, it will not highlighted.
Autocomplete:
    + `awt` to blacklist.
    + Parameters of method.
    + Return type at the right side.
    * Global scanning takes place once.
    * Improved item sorting by `text` length, then by `parameters` length and then by alphabetic.
    * Reduced memory usage:
        * By 15 Mb, with `A pool of strings vs id`.
        * By 10 Mb, removed interaction with `UserData`.
    * Reduced the number of saved `String` from 10,701 to 6,433.
    * Run Analysis in thread.
    * Fixed at the `checkCaretPosition`, position < 0.
    * Fixed basic keywords.
    * Fixed duplicate output of elements.
    * Fixed search in clusters after entered `class`.
CodeArea:
    * Fixed removing empty paragraph.
    * Fixed removing selected text.
Plugin:
    * Improved API.
    * Using `BufferedReader` instead of `InputStream`.
    CPU:
        * Implemented the formula for calculating the percentage depending on the information in `/proc/PID/stat` and
        `/proc/stat`.
    RAM:
        * Show memory usage without shared memory.
RichTextFX:
    * Fixed #774
Run:
    * Fixed re-start the program with an error - not executed.

=== v0.3.1-alpha - cleanup
+ Plugins (debug) for Linux:
    * RAM
    * CPU
Autocomplete:
    + Global sources.
    * Redesigned element.
Start:
    + Open Project.

=== v0.3.0-alpha
+ Arguments.
+ Languages: RU, UA.
* Fixed memory leak.
* Fixed window title of renames file/folder.
* Required Java 10.
* Updated API.
CodeArea:
    + Auto adding `\` to `"""` combination, the same with `'`.
    + Remove same / mirror symbols with their pair.
    + The possibility of closing a paired symbol without moving the arrow.