@@ -1,10 +1,10 @@
 package ru.mrchebik.build;
 
 import lombok.AllArgsConstructor;
-import ru.mrchebik.algorithm.AlgorithmFile;
 import ru.mrchebik.command.CommandWrapper;
+import ru.mrchebik.util.FileUtil;
 
 @AllArgsConstructor
-public class BuildModel extends AlgorithmFile {
+public class BuildModel extends FileUtil {
     protected CommandWrapper command;
 }
