@@ -1,0 +1,6 @@
+package ru.mrchebik.exception.service;
+
+@FunctionalInterface
+public interface ThrowingConsumer<T, E extends Exception> {
+    void accept(T t) throws E;
+}
