@@ -2,12 +2,12 @@ package ru.mrchebik.gui.place.create.project;
 
 import javafx.stage.Modality;
 import javafx.stage.Stage;
-import ru.mrchebik.gui.place.StageAction;
-import ru.mrchebik.gui.place.ViewAction;
+import ru.mrchebik.gui.place.StageHelper;
+import ru.mrchebik.gui.place.ViewHelper;
 import ru.mrchebik.locale.Locale;
 import ru.mrchebik.screen.measurement.Scale;
 
-public class CreateProjectPlace extends StageAction {
+public class CreateProjectPlace extends StageHelper {
     public static String setTitle() {
         return Locale.getProperty("new_project_title", true);
     }
@@ -18,6 +18,6 @@ public class CreateProjectPlace extends StageAction {
         initWindow(setTitle(),
                 Modality.APPLICATION_MODAL,
                 Scale.PLACE_CREATE_PROJECT,
-                ViewAction.CREATE_PROJECT);
+                ViewHelper.CREATE_PROJECT);
     }
 }
