@@ -2,12 +2,12 @@ package ru.mrchebik.gui.place.menu.create.file;
 
 import javafx.stage.Modality;
 import javafx.stage.Stage;
-import ru.mrchebik.gui.place.CellStageAction;
-import ru.mrchebik.gui.place.ViewAction;
+import ru.mrchebik.gui.place.CellStageHelper;
+import ru.mrchebik.gui.place.ViewHelper;
 import ru.mrchebik.locale.Locale;
 import ru.mrchebik.screen.measurement.Scale;
 
-public class CreateFilePlace extends CellStageAction {
+public class CreateFilePlace extends CellStageHelper {
     public static String setTitle() {
         return Locale.getProperty("create_file_title", true);
     }
@@ -19,6 +19,6 @@ public class CreateFilePlace extends CellStageAction {
         initWindow(setTitle(),
                 Modality.APPLICATION_MODAL,
                 Scale.PLACE_CREATE_FILE,
-                ViewAction.CREATE_FILE);
+                ViewHelper.CREATE_FILE);
     }
 }
