@@ -2,13 +2,13 @@ package ru.mrchebik.gui.place.start;
 
 import javafx.stage.Modality;
 import javafx.stage.Stage;
-import ru.mrchebik.gui.place.StageAction;
-import ru.mrchebik.gui.place.ViewAction;
+import ru.mrchebik.gui.place.StageHelper;
+import ru.mrchebik.gui.place.ViewHelper;
 import ru.mrchebik.inject.Injector;
 import ru.mrchebik.locale.Locale;
 import ru.mrchebik.screen.measurement.Scale;
 
-public class StartPlace extends StageAction {
+public class StartPlace extends StageHelper {
     public static String setTitle() {
         return Locale.getProperty("startup", true);
     }
@@ -25,6 +25,6 @@ public class StartPlace extends StageAction {
         initWindow(setTitle(),
                 Modality.NONE,
                 Scale.PLACE_START,
-                ViewAction.START);
+                ViewHelper.START);
     }
 }
