@@ -2,8 +2,8 @@ package ru.mrchebik.gui.place.work;
 
 import javafx.stage.Modality;
 import javafx.stage.Stage;
-import ru.mrchebik.gui.place.StageAction;
-import ru.mrchebik.gui.place.ViewAction;
+import ru.mrchebik.gui.place.StageHelper;
+import ru.mrchebik.gui.place.ViewHelper;
 import ru.mrchebik.inject.Injector;
 import ru.mrchebik.project.Project;
 import ru.mrchebik.screen.measurement.Scale;
@@ -11,7 +11,7 @@ import ru.mrchebik.screen.measurement.Scale;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 
-public class WorkPlace extends StageAction {
+public class WorkPlace extends StageHelper {
     public void start(String name, Path path) {
         initializeProject(name, path);
         Injector.initInjection(this);
@@ -21,7 +21,7 @@ public class WorkPlace extends StageAction {
         initWindow(Project.getTitle(),
                 Modality.APPLICATION_MODAL,
                 Scale.PLACE_WORK,
-                ViewAction.WORK);
+                ViewHelper.WORK);
 
         setOnClose(() -> System.exit(0));
     }
