@@ -2,8 +2,8 @@ package ru.mrchebik.process.save;
 
 import javafx.collections.ObservableList;
 import javafx.scene.control.Tab;
-import ru.mrchebik.algorithm.AlgorithmGui;
 import ru.mrchebik.model.ExistFileToSave;
+import ru.mrchebik.util.GuiUtil;
 
 import java.nio.file.Path;
 
@@ -18,7 +18,7 @@ public class SaveTabs extends Thread {
     public void run() {
         tabs.stream()
                 .map(tab -> {
-                    var codeArea = AlgorithmGui.getCodeAreaByTab(tab);
+                    var codeArea = GuiUtil.getCodeAreaByTab(tab);
 
                     var text = codeArea.getText();
                     var path = (Path) tab.getUserData();
