@@ -36,7 +36,6 @@ public class TaskAction {
 
                         if (!ErrorProcess.wasError) task.run();
                     });
-            ErrorProcess.wasError = false;
         }).start();
     }
 }
