@@ -5,6 +5,9 @@ Autcomplete:
     + Variables in method.
     * Returned `awt`.
     * Fixed UA window title.
+Run:
+    * Fixed failure position.
+    * Fixed a successful outcome when in fact there was a failure.
 
 === v0.3.2
 * Fixed `NullPointerException` to highlight cells on `TreeView`. But if it is `null`, it will not highlighted.
